@@ -23,3 +23,4 @@ Collate:
     'getPost.R'
     'getCheckins.R'
     'getLikes.R'
+    'getNewsfeed.R'
