@@ -3,6 +3,7 @@ export(getCheckins)
 export(getFriends)
 export(getLikes)
 export(getNetwork)
+export(getNewsfeed)
 export(getPage)
 export(getPost)
 export(getUsers)
