@@ -12,3 +12,4 @@
     - Fixed error with getPost when n>200 and n<500
 2013-12-21 - version 0.2.3:
     - Added 'getLikes' function
+    - Added 'getNewsfeed' function
